argocd/infra/forgejo/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Forgejo
    gethomepage.dev/icon: sh-forgejo
    gethomepage.dev/pod-selector: app.kubernetes.io/name=forgejo
  labels:
    app.kubernetes.io/instance: forgejo-app
  name: forgejo-httproute
spec:
  parentRefs:
    - name: cilium-public-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: https
    - name: cilium-private-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - forgejo.yanello.net
  rules:
    - backendRefs:
        - name: forgejo-http
          group: ""
          kind: Service
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
