argocd/infra/forgejo/manifests/tcp-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: forgejo-ssh-tcproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: forgejo-ssh
  rules:
    - backendRefs:
        - name: forgejo-ssh
          namespace: forgejo
          port: 22
