argocd/infra/forgejo/manifests/runner.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo-runner
  namespace: forgejo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo-runner
  template:
    metadata:
      labels:
        app: forgejo-runner
    spec:
      automountServiceAccountToken: false
      containers:
        - name: runner
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 2Gi
          image: harbor.yanello.net/library/forgejo-runner:latest@sha256:8f444bc472c23f16bb66ac896ade4f04ec0e42c0c994c47a5d8061949eebdd9c
          command: ["act_runner", "daemon", "--config", "/config/config.yaml"]
          workingDir: /data
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /config
            - name: containers-storage
              mountPath: /var/lib/containers
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-runner-data
        - name: config
          configMap:
            name: forgejo-runner-config
        - name: containers-storage
          emptyDir: {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo-runner
spec:
  endpointSelector:
    matchLabels:
      app: forgejo-runner
  egress:
    - toEntities:
        - cluster
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
